Wrote new tests for Class class, it now has 98% line coverage and 100% method coverage.